<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.victorcoimbra.cadastrodispositivo.loginActivity">

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_login"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />

    <EditText
        android:layout_below="@+id/tvLogin"
        android:id="@+id/etLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_login"
        />

    <TextView
        android:layout_below="@+id/etLogin"
        android:id="@+id/tvSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_senha"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />

    <EditText
        android:layout_below="@+id/tvSenha"
        android:id="@+id/etSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_senha"
        android:inputType="textPassword"
        />

    <Button
        android:layout_below="@+id/etSenha"
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="logar"
        android:text="@string/botao_login"
        />

    <CheckBox
        android:id="@+id/cbManterConectado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button"
        android:text="Manter conectado"/>

    <TextView
        android:id="@+id/tvCriar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/cbManterConectado"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="22dp"
        android:layout_marginTop="35dp"
        android:onClick="criar"
        android:text="@string/txt_criar" />


</RelativeLayout>
