<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.victorcoimbra.cadastrodispositivo.MainActivity">

    <Button
        android:id="@+id/btnDispositivo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/layout_marginTop_botao_menu"
        android:onClick="gerenciarDispositivos"
        android:text="@string/text_botao_dispositivo" />

    <Button
        android:id="@+id/btnSobre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnDispositivo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/layout_marginTop_botao_menu"
        android:onClick="abrirSobre"
        android:text="@string/text_botao_sobre" />

    <Button
        android:id="@+id/btnDesconectar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnSobre"
        android:layout_marginTop="@dimen/layout_marginTop_botao_menu"
        android:onClick="desconectar"
        android:text="@string/text_botao_desconectar" />
</RelativeLayout>
